@@ -1,3 +1,7 @@
+2006-05-15  Stefan Jahn  <stefan@lkcc.org>
+
+	* complex.cpp: Finally fixed the complex arccos() function.
+
 2006-05-14  Stefan Jahn  <stefan@lkcc.org>
 
 	* hbsolver.cpp: Added TODO list for the HB solver.
